# Tarkov-Quest-Items

./: .gitignore  README.md  package.json  settings.html  vite.config.ts
src/: App.module.scss  App.tsx  fourteen_zero.ts  main.tsx  styles.scss  tmp.ts  types.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001.sql
src-tauri/src/: db.rs  main.rs  sys_tray.rs  types.rs  util.rs  window.rs  wipe.rs
src-tauri/src/commands/: items.rs  mod.rs  objectives.rs  settings.rs  tasks.rs  wipe.rs
src-tauri/src/log_watcher/: manager.rs  mod.rs  parser.rs  watch.rs
src-tauri/src/types/: item.rs  mod.rs  objective.rs  settings.rs  task.rs  wipe.rs
src-tauri/src/types/objective/: all.rs  assign.rs  bulk_create.rs  mod.rs  task_get.rs  unassign.rs  update.rs
src-tauri/wipe_data/: 14.0.json
src/Items/: ItemLine.tsx  ItemTitleBar.tsx  Items.module.scss  Items.tsx  itemUtils.ts
src/Tasks/: ObjectiveLine.tsx  TaskLine.tsx  TaskPage.tsx  Tasks.module.scss  Tasks.tsx
src/lib/script/api/: fetch.ts
src/lib/script/log_watcher/: watch.ts
src/lib/scss/: vars.scss
src/nav/: MenuBar.module.scss  MenuBar.tsx  Navbar.module.scss  Navbar.tsx  WipePanel.module.scss  WipePanel.tsx
src/settings/: Settings.module.scss  Settings.tsx  main.tsx
